tests/snapshots/ui_snapshots__regression_tests__sidebar_long_names.snap
---
source: tests/ui_snapshots.rs
assertion_line: 519
expression: output
---
┌ Navigation ───────────┐
│📋  All Tasks           │
│📅  Today               │
│📆  Upcoming            │
│⚠️   Overdue            │
│📋  Scheduled           │
│🗓️   Calendar           │
│📊  Dashboard           │
│📈  Reports             │
│🔄  Habits              │
│🔒  Blocked             │
│🏷️   Untagged           │
│📁  No Project          │
│🕐  Recent              │
└───────────────────────┘
