tests/snapshots/ui_snapshots__regression_tests__sidebar_many_projects.snap
---
source: tests/ui_snapshots.rs
expression: output
---
┌ Navigation ───────────▲
│📋  All Tasks           █
│📅  Today               █
│📆  Upcoming            █
│⚠️   Overdue            │
│📋  Scheduled           │
│🗓️   Calendar           │
│📊  Dashboard           │
│📈  Reports             │
│🔄  Habits              │
│🎯  Goals               │
│🔒  Blocked             │
│🏷️   Untagged           │
│📁  No Project          │
└───────────────────────▼
